--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 #root {
-  width: 95vw;
-  height: 95vh;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  height: 100vh;
+  margin: auto;
   text-align: center;
-  background-color: black;
-  /* opacity: 20%; */
+  background-color: rgb(228, 117, 117);
+
 }
