--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   margin: auto;
   text-align: center;
   background-color: rgb(228, 117, 117);
