--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -2,11 +2,11 @@
     width: 100%;
     height: 20px;
     margin: auto;
+    /* background-color: rgb(210, 173, 173); */
     display: flex;
     justify-content: space-between;
-    background-color: rgb(210, 173, 173);
-    
     line-height: 20px;
+    align-items: center;
 }
 
 .buttonSize {
@@ -14,7 +14,7 @@
     width: 15px;
     height: 15px;
     border: none;
-    background-color: rgb(23, 30, 23);
+    background-color: black;
     padding: 0px;
 }
 
@@ -29,8 +29,8 @@
 }
 
 .buttonSize:hover {
-    background-color: grey;
-    opacity: 2;
+    background-color: rgb(145, 139, 139);
+    opacity: .02rem;
 }
 
 .buttonSize .firstLine {
@@ -41,7 +41,38 @@
     margin-top: 2px;
 }
 
-/* .listButtonDiv {
-    
-} */
+.navbar img {
+    width: 20px;
+    height: 20px;
+}
 
+.listButtonDiv {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logoDiv {
+    display: flex;
+    /* background-color: blueviolet; */
+    margin-left: 10px;
+}
+
+.logoDiv h1 {
+    font-size: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: white;
+}
+
+.listButton {
+    margin-top: 2px;
+    margin-left: 2px;
+    height: 10px;
+    /* background-color: yellow; */
+}
+
+.ng {
+    color: grey;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 5px;
+    line-height: 10px;
+}
