style: search input started up

--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -8,5 +8,5 @@
     height: 500px;
     margin: auto;
     /* background-color: rgb(210, 19, 51); */
-    background-color: black;
+    background-color: #0f0f0f;
 }
