--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,6 @@
   height: 100%;
   margin: auto;
   text-align: center;
-  background-color: rgb(228, 117, 117);
+  /* background-color: rgb(228, 117, 117); */
 
 }
