--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -4,9 +4,16 @@
 }
 
 .wrapper {
-    width: 99%;
-    height: 500px;
+    width: 100%;
+    height: 100vh;
     margin: auto;
     /* background-color: rgb(210, 19, 51); */
     background-color: black;
+}
+
+.wrapper .mainBodyContainer {
+    width: 1230px;
+    height: 500px;
+    background-color: red;
+    margin: auto;
 }
