--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -29,8 +29,8 @@
 }
 
 .buttonSize:hover {
-    background-color: rgb(145, 139, 139);
-    opacity: .02rem;
+    background-color: rgb(211, 21, 21 /50%);
+    opacity: 0.4;
 }
 
 .buttonSize .firstLine {
@@ -59,8 +59,10 @@
 
 .logoDiv h1 {
     font-size: 10px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight:bold;
+    font-family: "Roboto", sans-serif;
     color: white;
+    
 }
 
 .listButton {
@@ -72,7 +74,15 @@
 
 .ng {
     color: grey;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 5px;
     line-height: 10px;
+    margin-left: 2px;
+    /* background-color: red; */
+}
+
+@font-face {
+    font-family:"Roboto", sans-serif;
+    src: local("Roboto", sans-serif), url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+    font-weight: italic;
 }
