--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -5,7 +5,7 @@
 
 .wrapper {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin: auto;
     /* background-color: rgb(210, 19, 51); */
     background-color: black;
